monitoring-satellite/manifests/kubescape/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: kubescape
    app.kubernetes.io/name: kubescape
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: prometheus.v2
  name: kubescape
  namespace: monitoring-satellite
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kubescape
      app.kubernetes.io/name: kubescape
      app.kubernetes.io/part-of: kube-prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kubescape
        app.kubernetes.io/name: kubescape
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: prometheus.v2
    spec:
      containers:
      - args:
        - --controls-config
        - /home/.kubescape/controls-input.json
        - --exceptions
        - /home/.kubescape/kubescape-exceptions.json
        command:
        - kubescape
        image: quay.io/armosec/kubescape:prometheus.v2
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        name: kubescape
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 10m
            memory: 100Mi
        volumeMounts:
        - mountPath: /home/.kubescape
          name: config
          readOnly: true
      serviceAccountName: kubescape
      volumes:
      - configMap:
          name: kubescape
        name: config
