monitoring-satellite/manifests/kubescape/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kubescape
    app.kubernetes.io/name: kubescape
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: prometheus.v2
  name: kubescape
  namespace: monitoring-satellite
spec:
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: kubescape
    app.kubernetes.io/name: kubescape
    app.kubernetes.io/part-of: kube-prometheus
  type: NodePort
