monitoring-satellite/manifests/kubescape/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: kubescape
    app.kubernetes.io/name: kubescape
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: prometheus.v2
  name: kubescape
  namespace: monitoring-satellite
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kubescape
      app.kubernetes.io/name: kubescape
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Egress
  - Ingress
